cabal-version:   3.0
name:            mapas-pf
version:         0.1.0.0
synopsis:        Um módulo educacional para construção de mapas.
category:        Educacional
license:         GPL-2.0-or-later
license-file:    LICENSE
author:          mingas62@hotmail.com
maintainer:      Pedro-V
build-type:      Simple
extra-doc-files: CHANGELOG.md, README.md, teste.mapa

common standard
    default-language: Haskell2010
    ghc-options: -Wall -threaded
    hs-source-dirs:   src
    build-depends:
        base ^>=4.16.4.0,
        text ^>=1.2.5.0,
        codeworld-api ^>=0.8.1

library
    import:           standard
    exposed-modules:  Mapa
    build-depends:
        base ^>=4.16.4.0,
        text ^>=1.2.5.0,
        codeworld-api ^>=0.8.1

executable mapas
    import:           standard
    other-modules:    Mapa
    -- se você mudar o nome do arquivo principal, reflita a mudança aqui
    main-is:          Main.hs
