cabal-version:   3.0
name:            mapas-ufs
version:         0.1.0.0
synopsis:           Um módulo educacional para construção de mapas.
category:           Educacional
license:         GPL-2.0-or-later
license-file:    LICENSE
author:          mingas62@hotmail.com
maintainer:      Pedro-V
build-type:      Simple
extra-doc-files: CHANGELOG.md, README.md, teste.mapa

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Mapa
    build-depends:
        base ^>=4.16.4.0,
        text ^>=1.2.5.0,
        codeworld-api ^>=0.8.1
    hs-source-dirs:   src
    default-language: Haskell2010
